Hide passed events from suggested sessions. Fix time zone issues. Increase visibility of passed events

--- a/src/components/domain/app/session/session-card.module.scss
+++ b/src/components/domain/app/session/session-card.module.scss
@@ -4,7 +4,7 @@
   margin-bottom: 8px;
 
   &.passed {
-    opacity: 0.7;
+    opacity: 0.4;
   }
 
   &.ongoing {
